--- a/deno.json
+++ b/deno.json
@@ -11,6 +11,9 @@
     "@std/assert": "jsr:@std/assert@^1.0.11",
     "@std/testing": "jsr:@std/testing@^1.0.9"
   },
+  "fmt": {
+    "lineWidth": 100
+  },
   "lint": {
     "plugins": ["./index.ts"],
     "rules": {
