fix: Defined in deno.json to exclude .github/, .zed/ and .vscode when the package is published

--- a/deno.json
+++ b/deno.json
@@ -22,5 +22,12 @@
   },
   "tasks": {
     "snapshot": "deno test -RW=. -- -u"
+  },
+  "publish": {
+    "exclude": [
+      ".github",
+      ".zed",
+      ".vscode"
+    ]
   }
 }
